[gd_scene load_steps=7 format=2]

[ext_resource path="res://imgs/Bombe/bombes3.png" type="Texture" id=1]
[ext_resource path="res://src/Menu/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://imgs/Title/title1.png" type="Texture" id=3]
[ext_resource path="res://src/EndOfGame/buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://ressources/Xolonium-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CouleurFond" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marges" type="MarginContainer" parent="CouleurFond"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CouleurFond/Marges"]
margin_right = 737.0
margin_bottom = 670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CouleurFond/Marges/HBoxContainer"]
margin_right = 333.0
margin_bottom = 670.0

[node name="HBoxContainer" type="HBoxContainer" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer"]
margin_right = 333.0
margin_bottom = 43.0
custom_constants/separation = 14

[node name="LogoBomberball" type="TextureRect" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 43.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre" type="Label" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 333.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "BOMBERBALL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 333.0
margin_bottom = 670.0
size_flags_vertical = 3
custom_constants/separation = 53
alignment = 1

[node name="Solo" type="Button" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 243.0
margin_right = 242.0
margin_bottom = 285.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 4 )
text = "Solo Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multi" type="Button" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 338.0
margin_right = 293.0
margin_bottom = 380.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="two" type="Button" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi"]
margin_left = 40.0
margin_top = 90.0
margin_right = 80.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 4 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="three" type="Button" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi"]
margin_left = 145.0
margin_top = 90.0
margin_right = 185.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 4 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="four" type="Button" parent="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi"]
margin_left = 250.0
margin_top = 90.0
margin_right = 290.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 4 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CouleurFond/Marges/HBoxContainer"]
margin_left = 337.0
margin_right = 737.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImageDroite" type="TextureRect" parent="CouleurFond/Marges/HBoxContainer/CenterContainer"]
margin_top = 57.0
margin_right = 400.0
margin_bottom = 613.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CouleurFond/Marges"]
visible = false
margin_right = 737.0
margin_bottom = 670.0

[connection signal="mouse_entered" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Solo" to="." method="_on_Solo_mouse_entered"]
[connection signal="pressed" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Solo" to="." method="_on_Solo_pressed"]
[connection signal="mouse_entered" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi" to="." method="_on_Multi_mouse_entered"]
[connection signal="pressed" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi" to="." method="_on_Multi_pressed"]
[connection signal="mouse_entered" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/two" to="." method="_on_two_mouse_entered"]
[connection signal="pressed" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/two" to="." method="_on_two_pressed"]
[connection signal="mouse_entered" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/three" to="." method="_on_three_mouse_entered"]
[connection signal="pressed" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/three" to="." method="_on_three_pressed"]
[connection signal="mouse_entered" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/four" to="." method="_on_four_mouse_entered"]
[connection signal="pressed" from="CouleurFond/Marges/HBoxContainer/VBoxContainer/MenuOptions/Multi/four" to="." method="_on_four_pressed"]
